--- a/configuration.yaml
+++ b/configuration.yaml
@@ -109,23 +109,23 @@ sensor:
         unit_of_measurement: "ppm"
       power_consumption_low_tariff:
         friendly_name: 'Totaal verbruik laag'
-        value_template: '{{ (states.sensor.Huidig_verbruik.attributes["powerConsumptionLowTariff"] / 1000) | round(1)}}'
+        value_template: '{{ (states.sensor.huidig_verbruik.attributes["powerConsumptionLowTariff"] / 1000) | round(1)}}'
         unit_of_measurement: "kWh"
       power_consumption_high_tariff:
         friendly_name: 'Totaal verbruik hoog'
-        value_template: '{{ (states.sensor.Huidig_verbruik.attributes["powerConsumptionHighTariff"] / 1000) | round(1)}}'
+        value_template: '{{ (states.sensor.huidig_verbruik.attributes["powerConsumptionHighTariff"] / 1000) | round(1)}}'
         unit_of_measurement: "kWh"
       power_production_low_tariff:
         friendly_name: 'Totaal productie laag'
-        value_template: '{{ (states.sensor.Huidig_verbruik.attributes["powerProductionLowTariff"] / 1000) | round(1)}}'
+        value_template: '{{ (states.sensor.huidig_verbruik.attributes["powerProductionLowTariff"] / 1000) | round(1)}}'
         unit_of_measurement: "kWh"
       power_production_high_tariff:
         friendly_name: 'Totaal productie hoog'
-        value_template: '{{ (states.sensor.Huidig_verbruik.attributes["powerProductionHighTariff"] / 1000) | round(1)}}'
+        value_template: '{{ (states.sensor.huidig_verbruik.attributes["powerProductionHighTariff"] / 1000) | round(1)}}'
         unit_of_measurement: "kWh"
       current_power_production:
         friendly_name: 'Huidige productie'
-        value_template: '{{ states.sensor.Huidig_verbruik.attributes["CurrentPowerProduction"] }}'
+        value_template: '{{ states.sensor.huidig_verbruik.attributes["CurrentPowerProduction"] }}'
         unit_of_measurement: "watt"
       energy_usage_today:
         value_template: '{%- if not (is_state("sensor.power_consumption_high_tariff","unknown") or is_state("sensor.energy_usage_prior","unknown") )-%}  {{ (((states.sensor.power_consumption_high_tariff.state | float) + (states.sensor.power_consumption_low_tariff.state | float)) - (states.sensor.energy_usage_prior.state | float)) | max (0) | round(1) }} {%- endif -%}' ## ensure calc is no lower than zero!
@@ -148,7 +148,7 @@ sensor:
 
 
   - platform: mqtt
-    name: "Huidig verbruik"
+    name: "huidig verbruik"
     state_topic: "/energy/p1"
     unit_of_measurement: 'watt'
     value_template: "{{ value_json.CurrentPowerConsumption }}"
@@ -234,7 +234,8 @@ media_player:
 
 # Text to speech
 tts:
-  - platform: google
+  - platform: google_translate
+    service_name: google_say
 
 # Example configuration.yaml entry
 google_assistant:
