--- a/configuration/automations/store_energy_production_yesterday.yaml
+++ b/configuration/automations/store_energy_production_yesterday.yaml
@@ -7,4 +7,4 @@ action:
   data_template:
     topic: 'ha/cum_energy_production_prior'
     retain: true
-    payload: '{"day_1":"{{((states.sensor.Huidig_verbruik.attributes["powerProductionHighTariff"] / 1000)  + (states.sensor.Huidig_verbruik.attributes["powerProductionLowTariff"] / 1000)) | round(1) }}"}'
+    payload: '{"day_1":"{{((states.sensor.huidig_verbruik.attributes["powerProductionHighTariff"] / 1000)  + (states.sensor.huidig_verbruik.attributes["powerProductionLowTariff"] / 1000)) | round(1) }}"}'
