--- a/configuration.yaml
+++ b/configuration.yaml
@@ -59,16 +59,6 @@ sun:
 
 # Weather prediction
 sensor:
-  - platform: yr
-  - platform: customRest
-    resource: 'https://blok61.openremote.io/blok61/asset/query'
-    method: 'POST'
-    name: Blok61
-    refresh_token: !secret blok61_refresh_token
-    value_template: '{{value_json["name"]}}'
-    scan_interval: 60
-    force_update: true
-    
   - platform: template
     sensors:
       energy_usage_today:
@@ -96,6 +86,14 @@ sensor:
     state_topic: "/energy/p1"
     unit_of_measurement: 'watt'
     value_template: "{{ value_json.CurrentPowerConsumption }}"
+  - platform: mqtt
+    name: "Productie Solar"
+    state_topic: "/house/solarPower/"
+    unit_of_measurement: 'watt'
+  - platform: mqtt
+    name: "Solar kWh"
+    state_topic: "/house/solarkWh/"
+    unit_of_measurement: 'kWh'
   - platform: mqtt
     name: "current_power_production"
     state_topic: "/energy/p1"
@@ -193,6 +191,8 @@ sensor:
     state_topic: "/climate/living/bat"
     value_template: '{{value | round(1) }}'
     unit_of_measurement: '  V'
+  - platform: onewire
+
 
 binary_sensor:
   - platform: template
@@ -226,7 +226,6 @@ binary_sensor:
     host: 192.168.2.117
     count: 2
     scan_interval: 60
-    force_update: true
 
 switch:
   - platform: mqtt
@@ -245,6 +244,22 @@ switch:
     payload_on: "ON"
     payload_off: "OFF"
     retain: true
+  - platform: mqtt
+    name: "Heating"
+    state_topic: "/house/heatingConfirm/"
+    command_topic: "/house/heating/"
+    qos: 0
+    payload_on: "1"
+    payload_off: "0"
+    retain: true
+  - platform: mqtt
+    name: "Solar"
+    state_topic: "/house/solarConfirm/"
+    command_topic: "/house/solar/"
+    qos: 0
+    payload_on: "1"
+    payload_off: "0"
+    retain: true
 
 media_player:
   - platform: braviatv
@@ -256,12 +271,12 @@ tts:
     service_name: google_say
 
 # Example configuration.yaml entry
-google_assistant:
-  project_id: 'koppeling-ha'
-  api_key: !secret googleAssistantAPIKey
-  exposed_domains:
-    - light
-    - switch
+#google_assistant:
+#  project_id: 'koppeling-ha'
+#  api_key: !secret googleAssistantAPIKey
+#  exposed_domains:
+#    - light
+#    - switch
 
 # Cloud
 cloud:
@@ -278,6 +293,17 @@ mqtt:
   broker: 192.168.2.8
   username: homeassistant
   password: !secret mqqtpassword
+
+climate:
+  - platform: generic_thermostat
+    name: Woonkamer
+    heater: switch.heating
+    target_sensor: sensor.living_temp
+    away_temp: 18
+    min_temp: 15
+    max_temp: 22
+    hot_tolerance: 0.1
+    cold_tolerance: 0.2
 
 #KNX
 #knx:
